[tool.poetry]
name = "dummy_wav"
version = "0.1.0"
description = ""
authors = ["tim sabat"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "^1.22.2"
scipy = "^1.8.0"

[tool.poetry.dev-dependencies]
pyinstaller = "^4.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
